<resources>
    <string name="app_name">Wi-Fi App</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hint_username">Username</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_paired_devices">paired devices</string>
    <string name="title_other_devices">other devices</string>
    <string name="button_scan">scan...</string>
    <string name="none_paired">none paired</string>
    <string name="scanning">scanning...</string>
    <string name="select_device">select device</string>
    <string name="none_found">none found</string>
    <string name="connect">connect...</string>
    <string name="discoverable">discoverable</string>
    <string name="bt_not_enabled_leaving">Bluetooth is disabled. Leaving.</string>
    <string name="title_connected_to">connected to</string>
    <string name="title_connecting">connecting</string>
    <string name="title_not_connected">connected</string>
    <string name="title_activity_activity_device_name">activity_device_name</string>
    <string name="title_activity_file_list">Demo Files</string>
    <string name="select_file">select file</string>
    <string name="filelistmenu">demo files</string>
    <string name="button_print_text">PRINT</string>
    <string name="button_select_file_text">demo</string>
    <string name="button_connect_text">CONNECT</string>
    <string name="button_disconnect_text">DISCONNECT</string>
    <string name="toast_title">Information</string>
    <string name="bt_default_address">00:01:90:C6:7D:39</string>
    <string name="devicelist_action_button_text_scan">Scan</string>
    <string name="devicelist_action_button_text_cancel">STOP</string>
    <string name="btn_txt_select_file">File...</string>
    <string name="Voucherconnect">Get voucher</string>
    <string name="primaprinter">00:01:90:C6:7D:39</string>
</resources>
