<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:weightSum="1"
    android:padding="20dp"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="#fdf6d4">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:text="Logout"
        android:id="@+id/btnLogout"
        android:layout_gravity="right"
        android:textColor="#ffffff"
        android:background="#ee1d23" />

    <ImageView
        android:layout_width="127dp"
        android:layout_height="127dp"
        android:id="@+id/imageView"
        android:scaleType="fitCenter"
        android:src="@drawable/logosmall"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#CCCCCC">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="24dp"
        android:paddingBottom="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Voucher Detail"
            android:id="@+id/textView4"
            android:layout_gravity="center"
            android:textSize="@dimen/prima35"
            android:layout_marginTop="1dp"
            android:textColor="#ee1d23" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Plan Name"
                android:id="@+id/textView3"
                android:layout_marginRight="65dp"
              />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/planname"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Number of Voucher"
                android:id="@+id/selVersion"
                android:layout_marginRight="10dp"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/osversions"
                android:theme="@style/ThemeSpinner"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnSpan="8"
                android:spinnerMode="dropdown"
                android:layout_weight="0.85" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="-10dp"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#CCCCCC">

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/check" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connectivity"
            android:id="@+id/textView2"
            android:textSize="@dimen/prima35"
            android:layout_gravity="center"
           android:layout_marginTop="1dp"
            android:textColor="#ee1d23"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:text="MAC Address :"
                android:id="@+id/textView"
                android:textSize="@dimen/prima23"

                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/abc_primary_text_disable_only_material_light" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remote_device"
            android:textAlignment="center"
            android:layout_column="0"
            android:background="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/primaprinter"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textNoSuggestions"
            android:selectAllOnFocus="true"
            android:layout_weight="1" />
    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            >

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="60dp"
                android:id="@+id/button_scan"
                android:minWidth="180dp"
                android:layout_weight="0.5"
                android:textColor="#ffffff"
                android:background="#185494"
                android:text="SCAN"
                android:layout_marginRight="5dp"
                android:textSize="20dp" />

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="60dp"
                android:text="@string/button_connect_text"
                android:id="@+id/buttonConnect"
                android:minWidth="180dp"
                android:layout_gravity="right"
                android:layout_weight="0.5"
                android:textColor="#ffffff"
                android:background="#185494"
                android:layout_marginLeft="5dp"
                android:textSize="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#CCCCCC">

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/button_print_text"
            android:id="@+id/btnPrintFile"
            android:minWidth="180dp"
            android:layout_weight="0.97"
            android:background="@color/btn_login_bg"
            android:textColor="#ffffff"

            android:layout_marginTop="20dp"
            android:textSize="20dp" />
    </LinearLayout>

    <!--   Added code for voucher -->

    <!--<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="tap [select demo]"
        android:id="@+id/txtFileName"
        android:maxLines="2"
        android:background="@android:color/white"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_gravity="top"
        android:gravity="top" />-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:id="@+id/linLayoutSelectPrint"
        >

      <!-- <Button
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/button_select_file_text"
            android:id="@+id/btnSelectFile"
            android:minWidth="180dp"
            android:drawableLeft="@drawable/paper" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_select_file"
            android:id="@+id/btn_BrowseForFile"
            android:layout_weight="0.5" />-->

    </LinearLayout>
</LinearLayout>
</ScrollView>
